--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/vue-fontawesome": "0.0.22",
     "element-ui": "^2.3.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
